--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
     "nodemailer": "^6.9.14",
